--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5"
