--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.0.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.367.0",
     "next": "14.1.1",
+    "pagedone": "^1.1.2",
     "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
